--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,7 +37,8 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        env:
+        python fortune.py -UUID TOKEN
+        with:
           UUID:${{secrets.LINE_UUID}}
           TOKEN:${{secrets.TOKEN}}
-        python fortune.py
+        
