--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,9 +37,9 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
+      env:
+        UUID:${{secrets.LINE_UUID}}
+        TOKEN:${{secrets.TOKEN}}
       run: |
-        python fortune.py -UUID TOKEN
-        with:
-          UUID:${{secrets.LINE_UUID}}
-          TOKEN:${{secrets.TOKEN}}
-        
+        python fortune.py
+          
