--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,7 +37,8 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
-      run: fortune.py
+      run: 
+        python fortune.py
       env:
         LINE_UUID: ${{ secrets.LINE_UUID }} 
         TOKEN: ${{ secrets.TOKEN }} 
