--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -6,14 +6,13 @@ name: Python package
 on:
   
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "master" ]
   schedule:
     - cron: "*/1 * * * *"
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
