--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -4,11 +4,8 @@
 name: Python package
 
 on:
-  
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+  branches:
+      - Github-Actions
   schedule:
     - cron: "*/1 * * * *"
 jobs:
