--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -7,9 +7,7 @@ on:
   push:
   
     branches:
-      - master
-  schedule:
-    - cron: "*/1 * * * *"
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
