--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -9,7 +9,7 @@ on:
     branches:
       - main
   schedule:
-    - cron: "*/1 * * * *"
+    - cron: "00 08 * * *"
 jobs:
   build:
     runs-on: ubuntu-latest
